--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
     "unplugin-vue-router": "^0.12.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-vue-layouts-next": "^0.1.3",
+    "vite-ssg": "^27.0.1"
   }
 }
